# Amethysis

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
Amethysis/: CMakeLists.txt  Main.cpp  SharedHeaders.hpp
Amethysis/Core/: CMakeLists.txt
Amethysis/Core/AppFrame/: AppFrame.cpp  AppFrame.hpp  AppFrameLuaEngine.cpp  AppFrameWindow.cpp
Amethysis/Core/Application/: Application.hpp  ApplicationILuaEngine.cpp  ApplicationIWindow.cpp
Amethysis/Platform/: CMakeLists.txt
Amethysis/Platform/Lua/: LuaEngine.cpp  LuaEngine.hpp
Amethysis/Platform/Render/RenderCore/RenderCycle/: RenderCycle.h  RenderCycle.hpp
Amethysis/Platform/Render/RenderCore/RenderGraph/: RenderGraph.h  RenderGraph.hpp
Amethysis/Platform/Render/RenderCore/RenderPass/: RenderPass.h  RenderPass.hpp
Amethysis/Platform/Render/Resources/: Resource.hpp  ResourcePool.h  ResourcePool.hpp
Amethysis/Platform/Render/Resources/RenderTarget/: RenderTarget.hpp  RenderTargetPool.cpp  RenderTargetPool.hpp
Amethysis/Platform/Render/Resources/Shader/: Shader.hpp  ShaderPool.cpp  ShaderPool.hpp
Amethysis/Platform/Thread/: ThreadPool.cpp  ThreadPool.hpp
Amethysis/Platform/Window/: window.hpp
Amethysis/Utility/: CMakeLists.txt
Amethysis/Utility/Console/: Console.hpp
Amethysis/Utility/DLLHandler/: DLLHandler.cpp  DLLHandler.hpp
Amethysis/Utility/FrameRateController/: FrameRateController.cpp  FrameRateController.hpp
cmake/: TargetCommonOptions.cmake  packages.devtool.cmake  packages.directx.cmake  packages.lua.cmake
cmake/cpm/: loader.cpm.cmake
